# checkexec

./: .gitignore  Cargo.toml  Justfile  README.md
.github/: package
.github/workflows/: release.yaml  test.yaml
src/: main.rs
