[package]
name = "checkexec"
version = "0.1.15"
edition = "2018"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Conditionally run a command in a CLI (like Make, as a standalone tool)"
license = "MIT"
repository = "https://github.com/kurtbuilds/checkexec"

# categories are https://crates.io/category_slugs
categories = [
    "development-tools",
    "development-tools::build-utils",
    "command-line-utilities",
]

keywords = [
    "make",
    "just",
    "makefile",
    "task",
    "build",
]

[dependencies]
clap = { version = "3.0.0-rc.4", features = ["color", "env", "suggestions"]}
tempdir = "0.3.7"

[dev-dependencies]
tempfile = "3.2.0"
